# crawler

./: .gitignore  Makefile  README.md  crawler.py  pyproject.toml  script.py
docs/: API.md  ARCHITECTURE.md
shared/py-utils/master-crawler/src/py/cobra/: crawl_director.py
src/: __init__.py  main.py
src/config/: __init__.py  logging_config.py  patterns.py
src/core/: __init__.py  crawler.py  director.py
src/utils/: __init__.py  url_utils.py
tests/: __init__.py  conftest.py  test_crawler.py  test_director.py  test_url_utils.py
